--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Clout Clash</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="https://i.ibb.co/WJkwgLv/logo-3d.png" sizes="32x32" href="favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.ibb.co/WJkwgLv/logo-3d.png" />
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
