--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://i.ibb.co/WJkwgLv/logo-3d.png" />
+    <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/WJkwgLv/logo-3d.png" />
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
